migrate to jdk11, jdk 11 is amazing